--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leaderboard</title>
-<script defer src="index.bundle.js"></script><script defer src="scoreboard.bundle.js"></script></head>
+</head>
 <body>
   <section class="column" id="column-left">
     <h1>Leaderboard</h1>
