--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
   <section class="column" id="column-right">
     <h2>Add your score</h2>
     <form class="form-template" action="#">
-      <input type="text" class="name-input" placeholder="Your name">
-      <input type="number" class="score-input" placeholder="Your score">
+      <input name="name" type="text" class="name-input" placeholder="Your name">
+      <input name="score" type="number" class="score-input" placeholder="Your score">
       <button type="submit" id="submit-button">Submit</button>
     </form>
   </section>
