--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leaderboard</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+  </style>
 </head>
+
 <body>
   <section class="column" id="column-left">
     <h1>Leaderboard</h1>
@@ -24,4 +29,5 @@
     </form>
   </section>
 </body>
+
 </html>
